wacc/test/golden/semanticErr.expressions.lessPairExpr
# evaluating less-than on references

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(int,int) x = newpair(1,2) ;
  println x;
  pair(int,int) y = newpair(2,3) ;
  println y;
  println x < y
end


Semantic error in test/wacc_examples/invalid/semanticErr/expressions/lessPairExpr.wacc (line 16, column 13):
type error: comparisons are only valid between ints and chars, but a pair of an int and an int (pair(int, int)) was found
>   println y;
>   println x < y
>             ^
> end

